# t-pico-c3-embassy

./: Cargo.toml  README.md
src/: WIFI_SECRET1.txt  WIFI_SSID1.txt  buttons.rs  cmd.rs  configuration.rs  esp32c3.rs  imu.rs  lasers.rs  lcd.rs  main.rs  motors.rs  race.rs  rgb.rs  trace.rs  uformat.rs  vision.rs
src/screens/: config_screen.rs  imu_screen.rs  mod.rs  motors_screen.rs  race_screen.rs  ready_screen.rs  rgb_screen.rs
src/tcs3472/: configuration.rs  mod.rs  reading.rs
